# NucFu

./: .gitignore  .gitmodules  README.md
GLNucFu/: .gitignore  CMakeLists.txt  compute.cpp  compute.h  fluid2D.cpp  fluid2DCorrected.cpp  includes.h  main.cpp  matrixTester.cpp  matrixTesterCPU.cpp  package-lock.json  package.json  shader.cpp  shader.h
GLNucFu/glsl/: cMatrixInversion.glsl  cPhysics.glsl  cReplace.glsl  cshader.glsl  fShader.glsl  fshader.glsl  vshader.glsl
UnityNucFu/: .gitignore.txt  Assembly-CSharp.csproj  Magnets.sln  UnityNucFu.sln
UnityNucFu/Assets/Scenes/: SampleScene.unity
UnityNucFu/Assets/Scripts/Magnets/: Magnet.compute  Magnet.cs  MagnetCreator.cs
UnityNucFu/Assets/Scripts/Magnets/AdvancedMagnet/: Tokamak.cs  TokamakCreator.cs
UnityNucFu/Assets/Scripts/Magnets/BasicMagnet/: BasicMagnet.cs  BasicMagnetCreator.cs  ElectroMagnet.cs  Solenoid.cs  Tore.cs
UnityNucFu/Assets/Scripts/Particles/: Particle.cs  ParticleManager.cs  Particles.compute
UnityNucFu/Assets/Scripts/Utilities/: Const.cs  Matrix3X3.cs
UnityNucFu/ProjectSettings/: ProjectSettings.asset
UnityNucFu/Temp/: workerlic
UnityNucFu/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
UnityPlasmaSim/: Assembly-CSharp.csproj  UnityPlasmaSim.sln
UnityPlasmaSim/Assets/Scripts/2D/: PlasmaManager.cs  PlasmaSquare.cs
UnityPlasmaSim/ProjectSettings/: ProjectSettings.asset
UnityPlasmaSim/UserSettings/Layouts/: default-2022.dwlt
VkNucFu/: CMakeLists.txt  main.cpp
